--- a/templates/businesses/_form.html.twig
+++ b/templates/businesses/_form.html.twig
@@ -1,4 +1,143 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<!-- Page header -->
+<header class="page-header">
+    <div class="container page-name">
+        <h1 class="text-center">Modifier votre profil entreprise</h1>
+        <p class="lead text-center">Mettre à jour le profil de votre entreprise et mettez-le en ligne.</p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 col-lg-2">
+                        <div class="form-group">
+                            {{ form_widget(form.image, {'attr': {'class': 'dropify'}}) }}
+                            {# <input type="file" class="dropify" data-default-file="assets/img/logo-default.png"> #}
+                            <span class="help-block">A square logo</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-lg-10">
+                        <div class="form-group">
+                            {{ form_widget(form.name) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_widget(form.slogan) }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form_widget(form.minDescription) }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="row">
+                    <div class="form-group col-xs-12 col-sm-6 col-md-4">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-addon"><i class="fa fa-map-marker"></i></span>
+                            {{ form_widget(form.location) }}
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12 col-sm-6 col-md-4">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-addon"><i class="fa fa-users"></i></span>
+                            {{ form_widget(form.nbEmployees) }}
+                            <span class="input-group-addon">Employés</span>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12 col-sm-6 col-md-4">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-addon"><i class="fa fa-globe"></i></span>
+                            {{ form_widget(form.website) }}
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12 col-sm-6 col-md-4">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-addon"><i class="fa fa-birthday-cake"></i></span>
+                            {{ form_widget(form.dateFoundation) }}
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12 col-sm-6 col-md-4">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-addon"><i class="fa fa-phone"></i></span>
+                            {{ form_widget(form.phoneNumber) }}
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12 col-sm-6 col-md-4">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            {{ form_widget(form.email) }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="button-group">
+            <div class="action-buttons">
+                <div class="upload-button">
+                    <button class="btn btn-block btn-primary">Choisir une image de couverture</button>
+                    <input id="cover_img_file" type="file">
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- END Page header -->
+<!-- Main container -->
+<main>
+    <!-- Social media -->
+    <section>
+        <div class="container">
+            <header class="section-header">
+                <span>Restez connectés</span>
+                <h2>Médias sociaux</h2>
+            </header>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-facebook"></i></span>
+                            {{ form_widget(form.facebook) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-linkedin"></i></span>
+                            {{ form_widget(form.linkedin) }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-twitter"></i></span>
+                            {{ form_widget(form.twitter) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-youtube"></i></span>
+                            {{ form_widget(form.youtube) }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Social media -->
+    <!-- Submit -->
+    <section>
+        <div class="container">
+            <header class="section-header">
+                <span>Terminer?</span>
+                <h2>Soumettre</h2>
+                <p>Veuillez revoir vos informations une fois de plus et appuyer sur le bouton ci-dessous pour mettre
+                    votre entreprise en ligne.</p>
+            </header>
+            <p class="text-center">{{ form_widget(form.submit, { 'label': 'Valider vos modifications' }) }}</p>
+        </div>
+    </section>
+    <!-- END Submit -->
+</main>
+<!-- END Main container -->
 {{ form_end(form) }}
