--- a/templates/students/business.html.twig
+++ b/templates/students/business.html.twig
@@ -102,7 +102,7 @@
             <!-- Job item -->
            {% for posts in posts %}
             <div class="col-xs-12">
-              <a class="item-block" href="{{ path('students_offer', {'id': offer.id})}}">
+              <a class="item-block" href="{{ path('students_offer', {'id': posts.id}) }}">
                 <header>
                   <img src="assets/img/logo-google.jpg" alt="">
                   <div class="hgroup">
