--- a/templates/students/businesses.html.twig
+++ b/templates/students/businesses.html.twig
@@ -16,29 +16,13 @@
         <form action="#">
 
           <div class="row">
-            <div class="form-group col-xs-12 col-sm-4">
-              <input type="text" class="form-control" placeholder="Mot clé">
+            <div class="form-group col-xs-12 col-sm-6">
+              <input type="text" name="keyword" class="form-control" placeholder="Mot clé">
             </div>
 
-            <div class="form-group col-xs-12 col-sm-4">
-              <input type="text" class="form-control" placeholder="Adresse">
+            <div class="form-group col-xs-12 col-sm-6">
+              <input type="text" name="location" class="form-control" placeholder="Adresse">
             </div>
-
-            <div class="form-group col-xs-12 col-sm-4">
-              <select class="form-control selectpicker" multiple>
-                <option selected>Toutes les catégories</option>
-                <option>Informatique</option>
-                <option>BTP</option>
-                <option>Coiffure</option>
-                <option>Artisanat</option>
-                <option>Finance</option>
-                <option>Commerce</option>
-                <option>Marketing</option>
-                <option>Social</option>
-                <option>Logistique</option>
-              </select>
-            </div>
-
           </div>
 
           <div class="button-group">
