--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form 'form/form_errors.html.twig' %}
+
 {{ form_start(form) }}
 
 <header class="page-header">
@@ -11,7 +13,6 @@
 
 		<div class="row">
 			<div class="form-group col-xs-12">
-
 				{% if not form.title.vars.valid %}
 					<div class="has-error">
 						{{ form_widget(form.title) }}
@@ -21,25 +22,36 @@
 				{% endif %}
 
 				{{ form_errors(form.title) }}
-
 			</div>
 
 			<div class="form-group col-xs-12">
 				{{ form_widget(form.sections) }}
+				{{ form_errors(form.sections) }}
 			</div>
 
 			<div class="form-group col-xs-12">
-				{{ form_widget(form.minDescription) }}
-				<div class="invalid-feedback">
-					{{ form_errors(form.minDescription) }}
-				</div>
+				{% if not form.minDescription.vars.valid %}
+					<div class="has-error">
+						{{ form_widget(form.minDescription) }}
+					</div>
+				{% else %}
+					{{ form_widget(form.minDescription) }}
+				{% endif %}
+
+				{{ form_errors(form.minDescription) }}
+			
 			</div>
 
 			<div class="form-group col-xs-12">
-				{{ form_widget(form.site) }}
-				<div style="color: red">
-					{{ form_errors(form.site) }}
-				</div>
+				{% if not form.site.vars.valid %}
+					<div class="has-error">
+						{{ form_widget(form.site) }}
+					</div>
+				{% else %}
+					{{ form_widget(form.site) }}
+				{% endif %}
+
+				{{ form_errors(form.site) }}
 			</div>
 
 			<div class="form-group col-xs-12 col-sm-6 col-md-6">
@@ -47,8 +59,15 @@
 					<span class="input-group-addon">
 						<i class="fa fa-map-marker"></i>
 					</span>
-					{{ form_widget(form.location) }}
+					{% if not form.location.vars.valid %}
+						<div class="has-error">
+							{{ form_widget(form.location) }}
+						</div>
+					{% else %}
+						{{ form_widget(form.location) }}
+					{% endif %}	
 				</div>
+				{{ form_errors(form.location) }}
 			</div>
 
 			<div class="form-group col-xs-12 col-sm-6 col-md-6">
@@ -56,9 +75,16 @@
 					<span class="input-group-addon">
 						<i class="fa fa-clock-o"></i>
 					</span>
-					{{ form_widget(form.hoursWeek) }}
+					{% if not form.hoursWeek.vars.valid %}
+						<div class="has-error">
+							{{ form_widget(form.hoursWeek) }}
+						</div>
+					{% else %}
+						{{ form_widget(form.hoursWeek) }}
+					{% endif %}	
 					<span class="input-group-addon">hours / week</span>
 				</div>
+				{{ form_errors(form.hoursWeek) }}
 			</div>
 
 		</div>
@@ -77,8 +103,15 @@
 				<p>Description de l'entreprise, de l'emploi proposé, des compétences recherchées...
 				</p>
 			</header>
+			{% if not form.description.vars.valid %}
+				<div class="has-error">
+					{{ form_widget(form.description) }}
+				</div>
+			{% else %}
+				{{ form_widget(form.description) }}
+			{% endif %}
 
-			{{ form_widget(form.description) }}
+			{{ form_errors(form.description) }}
 
 		</div>
 		{# <a href="{{ path('offers_index') }}">back to list</a> #}
@@ -94,7 +127,7 @@
 			</header>
 
 			<p class="text-center">
-				<button class="btn btn-success btn-xl btn-round">{{ button_label }}</button>
+				{{ form_widget(form.submit, { 'label': 'Créer une annonce' }) }}
 			</p>
 
 		</div>
