--- a/templates/students/offers.html.twig
+++ b/templates/students/offers.html.twig
@@ -16,52 +16,31 @@
 
 				<div class="row">
 					<div class="form-group col-xs-12 col-sm-4">
-						<input type="text" name="keyword" class="form-control" placeholder="Mot-clé: nom du métier, compétences, ou entreprise">
+						<input type="text" name="keyword" class="form-control" placeholder="Mot-clé: nom du métier, compétences, ou entreprise" value={{ parameters.keyword }}>
 					</div>
 
 					<div class="form-group col-xs-12 col-sm-4">
-						<select name="location" class="form-control selectpicker" multiple>
+						<select name="location" class="form-control selectpicker">
 							<option selected>Toutes les communes</option>
-							<option>Bélep</option>
-							<option>Boulouparis</option>
-							<option>Bourail</option>
-							<option>Canala</option>
-							<option>Dumbéa</option>
-							<option>Farino</option>
-							<option>Hienghène</option>
-							<option>Houailou</option>
-							<option>Ile des Pins</option>
-							<option>Kaala-Gomen</option>
-							<option>Koné</option>
-							<option>Koumac</option>
-							<option>La Foa</option>
-							<option>Lifou</option>
-							<option>Maré</option>
-							<option>Moindou</option>
-							<option>Mont-Dore</option>
-							<option>Nouméa</option>
-							<option>Ouégoa</option>
-							<option>Ouvéa</option>
-							<option>Paita</option>
-							<option>Poindimié</option>
-							<option>Ponerihouen</option>
-							<option>Pouébo</option>
-							<option>Pouembout</option>
-							<option>Poum</option>
-							<option>Poya</option>
-							<option>Sarraméa</option>
-							<option>Thio</option>
-							<option>Touho</option>
-							<option>Voh</option>
-							<option>Yaté</option>
+							{% for city in cities %}
+								{% if parameters.location == city.name %}
+									<option selected>{{ city.name }}</option>
+								{% else %}
+									<option>{{ city.name }}</option>
+								{% endif %}
+							{% endfor %}
 						</select>
 					</div>
 
 					<div class="form-group col-xs-12 col-sm-4">
-						<select name="section" class="form-control selectpicker" multiple>
+						<select name="section" class="form-control selectpicker">
 							<option selected>Toutes les sections</option>
 							{% for section in sections %}
-								<option>{{ section.name }}</option>
+								{% if parameters.section == section.name %}
+									<option selected>{{ section.name }}</option>
+								{% else %}
+									<option>{{ section.name }}</option>
+								{% endif %}
 							{% endfor %}
 						</select>
 					</div>
